<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.griefprevention</groupId>
  <artifactId>GriefPrevention</artifactId>
  <version>16.18.2-SNAPSHOT</version>

  <name>GriefPrevention</name>
  <description>The official self-service anti-griefing Bukkit plugin for Minecraft servers since 2011.</description>
  <inceptionYear>2011</inceptionYear>
  <packaging>jar</packaging>

  <licenses>
    <license>
      <name>GPL-3.0-or-later</name>
      <url>https://choosealicense.com/licenses/gpl-3.0/</url>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/nouish/GriefPrevention/issues</url>
  </issueManagement>

  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.20.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <!-- Worldguard dependency -->
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-bukkit</artifactId>
      <version>7.0.9</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.bukkit</groupId>
          <artifactId>bukkit</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sk89q</groupId>
          <artifactId>commandbook</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.bstats</groupId>
          <artifactId>bstats-bukkit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- Vault dependency -->
    <dependency>
      <groupId>net.milkbowl.vault</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.7</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.bukkit</groupId>
          <artifactId>bukkit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>5.1.0</version>
    </dependency>
    <!-- Annotations for nullity and other behaviors -->
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>24.1.0</version>
      <scope>provided</scope>
    </dependency>
    <!-- Tests -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>5.11.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>paper-repo</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>worldedit-worldguard-repo</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
    <repository>
      <id>essx-repo</id>
      <url>https://ci.ender.zone/plugin/repository/everything/</url>
    </repository>
  </repositories>

  <build>
    <finalName>${project.name}-${project.version}-mc1.20.4</finalName>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>plugin.yml</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.2</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <createDependencyReducedPom>false</createDependencyReducedPom>
          <artifactSet>
            <includes>
              <include>com.zaxxer:HikariCP</include>
            </includes>
          </artifactSet>
          <relocations>
            <relocation>
              <pattern>com.zaxxer.hikari</pattern>
              <shadedPattern>com.griefprevention.lib.hikari</shadedPattern>
            </relocation>
          </relocations>
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/MANIFEST.MF</exclude>
                <exclude>module-info.class</exclude>
              </excludes>
            </filter>
          </filters>
        </configuration>
      </plugin>
      <!-- Append git commit hash to version -->
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>4.9.10</version>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
        </configuration>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.3.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.5.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
